# catalog.data.gov

./: .snyk  Jenkinsfile  Makefile  README.md  requirements.txt  vars.development.yml  vendor-requirements.sh
.circleci/: config.yml
.github/workflows/: commit.yml
ckan/: Dockerfile  requirements.txt
requirements/: pyproject.toml
requirements-spike/: Dockerfile  Dockerfile.pip  Dockerfile.pip-tools  Dockerfile.pipenv  Dockerfile.poetry  NOTES.md  Pipfile  docker-compose.yml  pyproject.toml  requirements-freeze.pip-tools.txt  requirements-freeze.pip.txt  requirements-freeze.pipenv.txt  requirements-freeze.poetry.txt  requirements.in  test.sh  use-pip-tools.sh  use-pip.sh  use-pipenv.sh  use-poetry.sh
solr/: local_setup.sh
tools/harvest_source_import/: requirements.txt
